@@ -11,7 +11,8 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.2.71</kotlin.version>
+        <kotlin.version>1.2.60</kotlin.version>
+        <sonar.jacoco.reportPaths>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
     </properties>
     <dependencies>
         <dependency>
@@ -52,17 +53,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-                    <!--设置包含的测试类 -->
-                    <includes>
-                        <include>******</include>
-                        <include>*/User*</include>
-                    </includes>
-                    <!-- 设置不进行测试类 -->
-                    <excludes>
-                        <exclude>Test*</exclude>
-                    </excludes>
-                    <!-- 跳过测试阶段，測試類写的有问题也会出错，一般不推荐 -->
-                    <!--<skip>true</skip> -->
+                    <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=512M</argLine>
                 </configuration>
             </plugin>
 
@@ -151,6 +142,12 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.1</version>
+                <configuration>
+                    <destFile>${sonar.jacoco.reportPaths}</destFile>
+                    <dataFile>${sonar.jacoco.reportPaths}</dataFile>
+                    <outputDirectory>${project.basedir}/target/jacoco-report</outputDirectory>
+                    <append>true</append>
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
